Set method private, update GatewayManager tests